--- a/ravel/ravel.css
+++ b/ravel/ravel.css
@@ -224,12 +224,13 @@ rect {
 div.start_color {
   display: inline-block;
   margin: 0 0 0 25px;
-  padding: 3px;
+    position: relative;
+    left: 3px;
 }
 
 .end_color,
 .start_color {
-  padding: 0 3px;
+  padding: 6px 0 0 0;
   background-color: #e2e2e2;
   box-shadow: 1px 1px 1px #bbb;
   color: #666;
@@ -241,20 +242,21 @@ div.start_color {
 }
 
 .gradient_legend {
-  height: 15px;
-  width: 110px;
+  height: 20px;
+  width: 120px;
   display: inline-block;
   border: 1px solid #999999;
   position: relative;
-  top: -9px;
+  top: -4px;
   opacity: 0.6;
 /*  background: -webkit-linear-gradient(right, #d7010d 0%, #32cc2a 100%);*/
 }
 
 .end_color {
   display: inline-block;
-  padding: 3px;
   margin: 0 10px 0 0;
+    position:relative;
+    left: -3px;
 }
 
 .RavelTooltip {
