Do some refactor and move the code author graph to the left side and adjust its height dynamically.

--- a/web/css/dc.css
+++ b/web/css/dc.css
@@ -296,10 +296,21 @@ div.dc-html-legend {
   fill: #000000; }
 
 body .container {
-  width: 1280px; }
+  width: 1300px;
+}
+body .inner_container {
+  width: 980px;
+  display: inline-block;
+  float: none;
+}
 
 body .dc-chart g.row text {
   fill: #000000; }
 
 #day-of-week-chart {
-  margin: 0 26px 0 0; }
+  margin: 0 26px 0 0;
+  display: inline-block;
+}
+
+#runtime-chart strong {
+  display: block; }
