--- a/style/dc.css
+++ b/style/dc.css
@@ -265,4 +265,7 @@ body .dc-chart g.row text {
 #day-of-week-chart {
   margin: 0 26px 0 0; }
 
+#runtime-chart strong {
+  display: block; }
+
 /*# sourceMappingURL=dc.css.map */
