align left and right sides at the top, make inline-block so they dont stack vertically.

--- a/style/dc.scss
+++ b/style/dc.scss
@@ -381,6 +381,14 @@ body .dc-chart g.row text {
 
 #day-of-week-chart {
   margin: 0 26px 0 0;
+    float: none;
+    display: inline-block;
+    vertical-align: top;
+}
+
+.inner_container {
+    display: inline-block;
+    width: 960px;
 }
 
 #runtime-chart strong {
