--- a/dc.css
+++ b/dc.css
@@ -302,7 +302,14 @@ body .dc-chart g.row text {
   fill: #000000; }
 
 #day-of-week-chart {
-  margin: 0 26px 0 0; }
+  margin: 0 26px 0 0;
+  float: none;
+  display: inline-block;
+  vertical-align: top; }
+
+.inner_container {
+  display: inline-block;
+  width: 960px; }
 
 #runtime-chart strong {
   display: block; }
