--- a/web/css/dc.css
+++ b/web/css/dc.css
@@ -301,7 +301,7 @@ body .container {
 body .dc-chart g.row text {
   fill: #000000; }
 
-#day-of-week-chart {
+.left_side {
   margin: 0 26px 0 0;
   float: none;
   display: inline-block;
