--- a/style/dc.scss
+++ b/style/dc.scss
@@ -34,6 +34,15 @@ div.dc-chart {
 }
 
 .dc-chart {
+
+    position: relative;
+
+    .top_left {
+        position: absolute;
+        top: 0;
+        left: 0;
+    }
+
     rect {
         &.bar {
             stroke: none;
