--- a/style/dc.scss
+++ b/style/dc.scss
@@ -427,3 +427,13 @@ body .dc-chart g.row text {
     background-color: #ffdddd;
     maring: 25px;
 }
+
+.container {
+    .using_file {
+        background-color: #f2f2f2;
+        border: 1px solid #cccccc;
+        padding: 3px;
+        font-size: 12px;
+        margin: 4px 0 4px -20px;
+    }
+}
