--- a/style/dc.css
+++ b/style/dc.css
@@ -304,8 +304,7 @@ body .dc-chart g.row text {
   border: 1px solid #cccccc;
   padding: 10px;
   font-size: 13px;
-  margin: 4px 0 4px -20px;
-  display: none; }
+  margin: 4px 0 4px -20px; }
 .container .help_icon {
   background-color: #f2f2f2;
   border: 1px solid #cccccc;
