--- a/style/dc.scss
+++ b/style/dc.scss
@@ -451,3 +451,34 @@ body .dc-chart g.row text {
         right: 5px;
     }
 }
+
+.dc-data-table {
+
+    th {
+        position: relative;
+    }
+
+    .up_arrow {
+        position: absolute;
+        top: 12px;
+        right: 2px;
+        width: 0;
+        height: 0;
+        border-left: 7px solid transparent;
+        border-right: 7px solid transparent;
+        border-bottom: 7px solid black;
+        cursor: pointer;
+    }
+
+    .down_arrow {
+        position: absolute;
+        top: 19px;
+        right: 2px;
+        width: 0;
+        height: 0;
+        border-left: 7px solid transparent;
+        border-right: 7px solid transparent;
+        border-top: 7px solid #000;
+        cursor: pointer;
+    }
+}
