--- a/style/dc.css
+++ b/style/dc.css
@@ -321,23 +321,23 @@ body .dc-chart g.row text {
   position: relative; }
 .dc-data-table .up_arrow {
   position: absolute;
-  top: 12px;
+  top: 10px;
   right: 2px;
   width: 0;
   height: 0;
   border-left: 7px solid transparent;
   border-right: 7px solid transparent;
-  border-bottom: 7px solid black;
+  border-bottom: 7px solid #555555;
   cursor: pointer; }
 .dc-data-table .down_arrow {
   position: absolute;
-  top: 19px;
+  top: 20px;
   right: 2px;
   width: 0;
   height: 0;
   border-left: 7px solid transparent;
   border-right: 7px solid transparent;
-  border-top: 7px solid #000;
+  border-top: 7px solid #555555;
   cursor: pointer; }
 
 /*# sourceMappingURL=dc.css.map */
