--- a/dc.css
+++ b/dc.css
@@ -342,3 +342,13 @@ body .dc-chart g.row text {
   border-right: 7px solid transparent;
   border-top: 7px solid #555555;
   cursor: pointer; }
+
+.bottom_table {
+  position: relative; }
+  .bottom_table .compare_button {
+    position: absolute;
+    top: 30px;
+    right: -5px;
+    z-index: 10; }
+  .bottom_table .hidden {
+    display: none; }
