--- a/style/dc.css
+++ b/style/dc.css
@@ -297,8 +297,7 @@ body .dc-chart g.row text {
   color: red;
   border: 1px solid red;
   padding: 15px;
-  background-color: #ffdddd;
-  maring: 25px; }
+  background-color: #ffdddd; }
 
 .container .help_body {
   background-color: #f2f2f2;
