--- a/dc.css
+++ b/dc.css
@@ -306,6 +306,9 @@ body .dc-chart g.row text {
   font-size: 13px;
   margin: 4px 0 4px -20px; }
 
+.container a {
+  cursor: pointer; }
+
 .container .help_icon {
   background-color: #f2f2f2;
   border: 1px solid #cccccc;
