--- a/style/dc.scss
+++ b/style/dc.scss
@@ -438,6 +438,10 @@ body .dc-chart g.row text {
         margin: 4px 0 4px -20px;
     }
 
+    a {
+        cursor: pointer;
+    }
+
     .help_icon {
         background-color: #f2f2f2;
         border: 1px solid #cccccc;
