--- a/style/dc.scss
+++ b/style/dc.scss
@@ -486,7 +486,7 @@ body .dc-chart g.row text {
     .up_arrow {
         position: absolute;
         top: 10px;
-        right: 2px;
+        left: -9px;
         width: 0;
         height: 0;
         border-left: 7px solid transparent;
@@ -498,13 +498,22 @@ body .dc-chart g.row text {
     .down_arrow {
         position: absolute;
         top: 20px;
-        right: 2px;
+        left: -9px;
         width: 0;
         height: 0;
         border-left: 7px solid transparent;
         border-right: 7px solid transparent;
         border-top: 7px solid #555555;
         cursor: pointer;
+    }
+
+    .dc-table-head {
+        position: relative;
+        left: 14px;
+    }
+
+    .dc-table-head:last-child {
+        display: none;
     }
 }
 
