styling for dropdowns for the compare button selects
Former-commit-id: d0e2489b98c3122f011bc524f94017c7a1786de5

--- a/style/dc.scss
+++ b/style/dc.scss
@@ -532,6 +532,11 @@ body .dc-chart g.row text {
         top: 30px;
         right: 120px;
         z-index: 10;
+
+        select {
+            height: 35px;
+            margin: 0 5px  0 0;
+        }
     }
 
     .hidden {
