--- a/style/dc.css
+++ b/style/dc.css
@@ -376,6 +376,9 @@ body .dc-chart g.row text {
     top: 30px;
     right: 120px;
     z-index: 10; }
+    .bottom_table .compare_arguments select {
+      height: 35px;
+      margin: 0 5px  0 0; }
   .bottom_table .hidden {
     display: none; }
 
