Added the ability to set parameter into the URL that compare calls.  as well as the ability for get_param to run decodeURIComponent on the string values it has.  And add exe_compare to URL on final page.
Former-commit-id: eec1b3b8b12c65f1e2eb0c6f94bca00e6a5bd42c

--- a/style/dc.css
+++ b/style/dc.css
@@ -379,6 +379,8 @@ body .dc-chart g.row text {
     .bottom_table .compare_arguments select {
       height: 35px;
       margin: 0 5px  0 0; }
+    .bottom_table .compare_arguments #bookmarkme {
+      margin: 0 10px 0 0; }
   .bottom_table .hidden {
     display: none; }
 
