--- a/style/dc.scss
+++ b/style/dc.scss
@@ -537,6 +537,10 @@ body .dc-chart g.row text {
             height: 35px;
             margin: 0 5px  0 0;
         }
+
+        #bookmarkme {
+            margin: 0 10px 0 0;
+        }
     }
 
     .hidden {
