--- a/style/dc.scss
+++ b/style/dc.scss
@@ -409,6 +409,11 @@ div.dc-html-legend {
     fill: #000000;
 }
 
+#day-of-week-chart {
+    position: absolute;
+    left: -250px;
+}
+
 body .container {
   width: 1280px;
 }
@@ -422,6 +427,7 @@ body .dc-chart g.row text {
     float: none;
     display: inline-block;
     vertical-align: top;
+    position: relative;
 }
 
 .inner_container {
