Fix a number of launchdate_days_ago issues, plus make the simulated date a deterministic one so we get the same graphs on each run as expected.
Former-commit-id: 4334df10de6eea7533337c8ab2b2fb4dff168bdf

--- a/style/dc.css
+++ b/style/dc.css
@@ -388,6 +388,16 @@ body .dc-chart g.row text {
     top: 30px;
     right: -5px;
     z-index: 10; }
+  .bottom_table .launcher .launchdate_days_ago {
+    position: absolute;
+    left: 0;
+    top: 20px;
+    padding: 8px;
+    font-size: 14px;
+    z-index: 1000; }
+  .bottom_table .launcher .launch_button {
+    position: absolute;
+    left: 240px; }
   .bottom_table .compare_arguments {
     position: absolute;
     top: 30px;
