--- a/style/dc.scss
+++ b/style/dc.scss
@@ -459,7 +459,7 @@ body .dc-chart g.row text {
     .help_body, .user_pref_body {
         background-color: #f2f2f2;
         border: 1px solid #cccccc;
-        padding: 22px;
+        padding: 22px 0 22px 22px;
         font-size: 13px;
         margin: 4px 0 4px -20px;
     }
@@ -467,7 +467,7 @@ body .dc-chart g.row text {
     .user_pref_body .prow {
 
         display: inline-block;
-        width: 300px;
+        width: 230px;
         margin: 6px 0 6px 0;
 
         .title {
