--- a/web/css/dc.css
+++ b/web/css/dc.css
@@ -416,5 +416,13 @@ body .dc-chart g.row text {
       margin: 0 5px  0 0; }
     .bottom_table .compare_arguments #bookmarkme {
       margin: 0 10px 0 0; }
+    .bottom_table .compare_arguments .xaxis_label {
+      position: absolute;
+      left: 10px;
+      top: -20px; }
+    .bottom_table .compare_arguments .groupby_label {
+      position: absolute;
+      left: 227px;
+      top: -20px; }
   .bottom_table .hidden {
     display: none; }
