--- a/style/dc.css
+++ b/style/dc.css
@@ -320,38 +320,46 @@ body .dc-chart g.row text {
   padding: 15px;
   background-color: #ffdddd; }
 
-.container .help_body, .container .user_pref_body {
-  background-color: #f2f2f2;
-  border: 1px solid #cccccc;
-  padding: 22px 0 22px 22px;
-  font-size: 13px;
-  margin: 4px 0 4px -20px; }
-.container .user_pref_body .prow {
-  display: inline-block;
-  width: 230px;
-  margin: 6px 0 6px 0; }
-  .container .user_pref_body .prow .title {
-    position: relative;
-    top: 4px;
-    left: 4px; }
-  .container .user_pref_body .prow input {
-    zoom: 1.5; }
-.container a {
-  cursor: pointer; }
-.container .help_icon, .container .user_pref_icon {
-  background-color: #f2f2f2;
-  border: 1px solid #cccccc;
-  padding: 3px;
-  display: inline-block;
-  width: 20px;
-  cursor: pointer;
-  text-align: center;
-  position: absolute;
-  top: 5px;
-  right: 5px;
-  z-index: 1000; }
-.container .user_pref_icon {
-  right: 40px; }
+.container {
+  /* make room for rotated labels. */
+  /* Need to be able to see long labels without them overlapping each other. */ }
+  .container svg[height="370"] {
+    height: 410px; }
+  .container .x.axis text {
+    text-anchor: end !important;
+    transform: rotate(-45deg); }
+  .container .help_body, .container .user_pref_body {
+    background-color: #f2f2f2;
+    border: 1px solid #cccccc;
+    padding: 22px 0 22px 22px;
+    font-size: 13px;
+    margin: 4px 0 4px -20px; }
+  .container .user_pref_body .prow {
+    display: inline-block;
+    width: 230px;
+    margin: 6px 0 6px 0; }
+    .container .user_pref_body .prow .title {
+      position: relative;
+      top: 4px;
+      left: 4px; }
+    .container .user_pref_body .prow input {
+      zoom: 1.5; }
+  .container a {
+    cursor: pointer; }
+  .container .help_icon, .container .user_pref_icon {
+    background-color: #f2f2f2;
+    border: 1px solid #cccccc;
+    padding: 3px;
+    display: inline-block;
+    width: 20px;
+    cursor: pointer;
+    text-align: center;
+    position: absolute;
+    top: 5px;
+    right: 5px;
+    z-index: 1000; }
+  .container .user_pref_icon {
+    right: 40px; }
 
 .dc-data-table th {
   position: relative; }
