--- a/dc.css
+++ b/dc.css
@@ -324,13 +324,10 @@ body .dc-chart g.row text {
   /* make room for rotated labels. */
   /* Need to be able to see long labels without them overlapping each other. */ }
   .container svg[height="370"] {
-    height: 410px; }
+    height: 450px; }
   .container .x.axis text {
     text-anchor: end !important;
-    transform: rotate(-45deg) translate(-7px, -5px);
-    position: relative;
-    left: -8px;
-    top: 3px; }
+    transform: rotate(-45deg) translate(-7px, -5px) scaleX(1.15) scaleY(1.15); }
   .container .help_body, .container .user_pref_body {
     background-color: #f2f2f2;
     border: 1px solid #cccccc;
