--- a/web/css/dc.css
+++ b/web/css/dc.css
@@ -327,7 +327,9 @@ body .dc-chart g.row text {
     height: 450px; }
   .container .x.axis text {
     text-anchor: end !important;
-    transform: rotate(-45deg) translate(-7px, -5px) scaleX(1.2) scaleY(1.2); }
+    transform: rotate(-45deg) translate(-7px, -5px) scaleX(1.23) scaleY(1.23); }
+  .container .y.axis text {
+    transform: scaleX(1.2) scaleY(1.2); }
   .container .help_body, .container .user_pref_body {
     background-color: #f2f2f2;
     border: 1px solid #cccccc;
