Fix the alignment of charts to prevent wrapping around the line, to avoid those blank spots
Former-commit-id: 7e3d65d4e9e28488acf7039c53bb971e58e31413

--- a/dc.css
+++ b/dc.css
@@ -2,9 +2,12 @@
   fill-opacity: 0.5;
   stroke-opacity: 0.5; }
 
+.chart_container .dc-chart {
+  height: 420px; }
+
 div.dc-chart {
-  float: left;
-  padding-top: 55px; }
+  padding-top: 55px;
+  float: left; }
 
 .row:nth-child(1) .dc-chart {
   height: 410px;
