--- a/dc.css
+++ b/dc.css
@@ -189,11 +189,12 @@ div.dc-chart {
   .dc-chart circle.dot {
     stroke: none; }
 
-.dc-data-count {
-  float: right;
-  margin-top: 15px;
+div div.dc-data-count {
+  float: left;
+  padding: 0 0 0 0;
+  margin-top: 55px;
   margin-right: 15px; }
-  .dc-data-count .filter-count, .dc-data-count .total-count {
+  div div.dc-data-count .filter-count, div div.dc-data-count .total-count {
     color: #3182bd;
     font-weight: bold; }
 
@@ -414,7 +415,8 @@ body .dc-chart g.row text {
     z-index: 1000; }
   .bottom_table .launcher .launch_button {
     position: absolute;
-    left: 240px; }
+    left: 230px;
+    top: 21px; }
   .bottom_table .compare_arguments {
     position: absolute;
     top: 30px;
