--- a/style/dc.scss
+++ b/style/dc.scss
@@ -297,10 +297,12 @@ div.dc-chart {
     }
 }
 
-.dc-data-count {
-    float: right;
-    margin-top: 15px;
+div div.dc-data-count {
+    float: left;
+    padding: 0 0 0 0;
+    margin-top: 55px;
     margin-right: 15px;
+
     .filter-count, .total-count {
         color: $color_boston_blue;
         font-weight: bold;
@@ -594,7 +596,8 @@ body .dc-chart g.row text {
 
         .launch_button {
             position: absolute;
-            left: 240px;
+            left: 230px;
+            top: 21px;
         }
     }
 
