add error message if a sf parameter is not given.  increase size of that error message by a bit.
Former-commit-id: d7d07ff59b1f68e2dc010b8a3be7b1bd51fff758

--- a/style/dc.scss
+++ b/style/dc.scss
@@ -457,6 +457,8 @@ body .dc-chart g.row text {
     color: red;
     border: 1px solid red;
     padding: 15px;
+    font-size: 16px;
+    line-height: 1.5;
     background-color: #ffdddd;
 }
 
