--- a/style/dc.scss
+++ b/style/dc.scss
@@ -439,6 +439,22 @@ body .dc-chart g.row text {
 .inner_container {
     display: inline-block;
     width: 1480px;
+
+    .instructions {
+        color: #888888;
+    }
+
+    .directory {
+        padding: 7px;
+        width: 400px;
+        color: #555555;
+    }
+
+    .update_button {
+        position: relative;
+        top: -5px;
+        left: 6px;
+    }
 }
 
 #runtime-chart strong {
@@ -458,8 +474,8 @@ body .dc-chart g.row text {
     border: 1px solid red;
     padding: 15px;
     font-size: 16px;
-    line-height: 1.5;
-    background-color: #ffdddd;
+    line-height: 1.6;
+    background-color: #ffeeee;
 }
 
 .container {
