support reset link and load_filter and on_load_filter
Former-commit-id: c0af65c1f35bdea7ad1a05eea7aebe001edcbd6f

--- a/style/dc.scss
+++ b/style/dc.scss
@@ -38,6 +38,11 @@ div.dc-chart {
     float: left;
 }
 
+div.horizontal-bar-chart {
+    padding-top: 30px;
+    overflow-y: scroll;
+}
+
 .row:nth-child(1) {
 
     .dc-chart {
