--- a/dc.css
+++ b/dc.css
@@ -9,6 +9,10 @@ div.dc-chart {
   padding-top: 55px;
   float: left; }
 
+div.horizontal-bar-chart {
+  padding-top: 30px;
+  overflow-y: scroll; }
+
 .row:nth-child(1) .dc-chart {
   height: 410px;
   margin: 37px 0 0 0; }
