Fix reset button, now that its at a new height in the DOM.  Needed to make reset viewable in a horizontal bar chart.  Also, change binding to adjust to new location
Former-commit-id: f968a2b378bcc8024a56ba92d675fb578c187481

--- a/style/dc.scss
+++ b/style/dc.scss
@@ -58,6 +58,27 @@ div.horizontal-bar-chart {
     float: left;
     display: inline-block;
 
+    a.horiz_reset {
+        position: absolute;
+        left: 10px;
+        z-index: 100;
+    }
+
+    .options_title {
+        position: absolute;
+        left: 10px;
+        top: -20px;
+    }
+
+    .horizontal-bar-chart {
+
+        padding-top: 0;
+
+        g.axis {
+            display: none;
+        }
+    }
+
     .the_bar {
         position: absolute;
 
@@ -65,8 +86,8 @@ div.horizontal-bar-chart {
             display: none;
         }
 
-        g.the_axis {
-            transform: translate(0,375px);
+        g.axis {
+            transform: translate(0,345px);
         }
     }
 }
