--- a/web/css/dc.css
+++ b/web/css/dc.css
@@ -23,12 +23,24 @@ div.horizontal-bar-chart {
   position: relative;
   float: left;
   display: inline-block; }
+  .outer_holder a.horiz_reset {
+    position: absolute;
+    left: 10px;
+    z-index: 100; }
+  .outer_holder .options_title {
+    position: absolute;
+    left: 10px;
+    top: -20px; }
+  .outer_holder .horizontal-bar-chart {
+    padding-top: 0; }
+    .outer_holder .horizontal-bar-chart g.axis {
+      display: none; }
   .outer_holder .the_bar {
     position: absolute; }
     .outer_holder .the_bar .row {
       display: none; }
-    .outer_holder .the_bar g.the_axis {
-      transform: translate(0, 375px); }
+    .outer_holder .the_bar g.axis {
+      transform: translate(0, 345px); }
 
 .dc-chart {
   position: relative; }
