fix reset positioning and background and temp make piechart horiz for testing
Former-commit-id: e8b4619178f27be06c1a32a6e38d52f840bb4cb8

--- a/style/dc.scss
+++ b/style/dc.scss
@@ -61,13 +61,16 @@ div.horizontal-bar-chart {
     a.horiz_reset {
         position: absolute;
         left: 10px;
+        top: -6px;
         z-index: 100;
+        background-color: white;
+        padding: 0 5px 0 0;
     }
 
     .options_title {
         position: absolute;
         left: 10px;
-        top: -20px;
+        top: -23px;
     }
 
     .horizontal-bar-chart {
