--- a/dc.css
+++ b/dc.css
@@ -26,11 +26,14 @@ div.horizontal-bar-chart {
   .outer_holder a.horiz_reset {
     position: absolute;
     left: 10px;
-    z-index: 100; }
+    top: -6px;
+    z-index: 100;
+    background-color: white;
+    padding: 0 5px 0 0; }
   .outer_holder .options_title {
     position: absolute;
     left: 10px;
-    top: -20px; }
+    top: -23px; }
   .outer_holder .horizontal-bar-chart {
     padding-top: 0; }
     .outer_holder .horizontal-bar-chart g.axis {
