--- a/style/dc.css
+++ b/style/dc.css
@@ -400,19 +400,25 @@ body .dc-chart g.row text {
   .container a {
     cursor: pointer; }
   .container .help_icon, .container .user_pref_icon {
-    background-color: #f2f2f2;
-    border: 1px solid #cccccc;
-    padding: 3px;
+    padding: 8px;
     display: inline-block;
-    width: 20px;
     cursor: pointer;
     text-align: center;
     position: absolute;
     top: 5px;
     right: 5px;
     z-index: 1000; }
+    .container .help_icon div, .container .user_pref_icon div {
+      width: 20px;
+      height: 20px;
+      -webkit-filter: invert(100%);
+      /* Safari/Chrome */
+      filter: invert(100%); }
   .container .user_pref_icon {
     right: 40px; }
+    .container .user_pref_icon div {
+      background-image: url(/web/img/check.png);
+      background-size: 100% 100%; }
 
 .dc-data-table th {
   position: relative; }
