--- a/style/dc.scss
+++ b/style/dc.scss
@@ -586,7 +586,7 @@ body .dc-chart g.row text {
         cursor: pointer;
     }
 
-    .help_icon, .user_pref_icon {
+    .icon {
         padding: 8px 7px 8px 8px;
         display: inline-block;
         cursor: pointer;
