add two more icons walltime and jupyter
Former-commit-id: 742c71abeaacd59c6b88a9ca12b667fb822c5f46

--- a/style/dc.css
+++ b/style/dc.css
@@ -423,6 +423,16 @@ body .dc-chart g.row text {
       background-image: url(/web/img/check.png);
       background-size: 100% 100%; }
 
+.dc-data-table .walltime {
+  position: static; }
+  .dc-data-table .walltime div {
+    background-image: url(/web/img/walltime.png);
+    background-size: 100% 100%; }
+.dc-data-table .jupyter {
+  position: static; }
+  .dc-data-table .jupyter div {
+    background-image: url(/web/img/jupyter.png);
+    background-size: 100% 100%; }
 .dc-data-table th {
   position: relative; }
 .dc-data-table .up_arrow {
