--- a/style/dc.scss
+++ b/style/dc.scss
@@ -625,6 +625,26 @@ body .dc-chart g.row text {
 
 .dc-data-table {
 
+    .walltime {
+
+        position: static;
+
+        div {
+            background-image: url(/web/img/walltime.png);
+            background-size: 100% 100%;
+        }
+    }
+
+    .jupyter {
+
+        position: static;
+
+        div {
+            background-image: url(/web/img/jupyter.png);
+            background-size: 100% 100%;
+        }
+    }
+
     th {
         position: relative;
     }
