--- a/style/dc.scss
+++ b/style/dc.scss
@@ -488,21 +488,10 @@ body .dc-chart g.row text {
 .inner_container {
     display: inline-block;
     width: 1480px;
+    padding-top: 60px;
 
     .instructions {
         color: #888888;
-    }
-
-    .directory {
-        padding: 7px;
-        width: 400px;
-        color: #555555;
-    }
-
-    .update_button {
-        position: relative;
-        top: -5px;
-        left: 6px;
     }
 }
 
@@ -525,6 +514,44 @@ body .dc-chart g.row text {
     font-size: 16px;
     line-height: 1.6;
     background-color: #ffeeee;
+    margin: 60px 0 0 0;
+}
+
+#file_upload {
+
+    background-color: #e6e6e6;
+    border-bottom: 1px solid #d6d6d6;
+    height: 49px;
+    position: absolute;
+    left: 0;
+    top: 0;
+    width: 100%;
+    margin-bottom: 30px;
+
+    div.update_button {
+        position: relative;
+        top: 8px;
+        left: 432px;
+        right: auto;
+        padding: 7px;
+
+        div {
+            background-image: url(/web/img/refresh.png);
+            background-size: 100% 100%;
+            width: 17px;
+            height: 17px
+        }
+    }
+
+    .directory {
+        padding: 7px;
+        width: 400px;
+        position: absolute;
+        left: 8px;
+        top: 7px;
+        color: #555555;
+    }
+
 }
 
 .container {
@@ -596,7 +623,7 @@ body .dc-chart g.row text {
         right: 5px;
         z-index: 1000;
 
-        div {
+        .inner {
             width: 20px;
             height: 20px;
             -webkit-filter: invert(100%); /* Safari/Chrome */
