--- a/dc.css
+++ b/dc.css
@@ -451,10 +451,13 @@ body .dc-chart g.row text {
     background-image: url(/web/img/walltime.png);
     background-size: 100% 100%; }
 
-.dc-data-table .jupyter {
-  position: static; }
-  .dc-data-table .jupyter div {
-    background-image: url(/web/img/jupyter.png);
+.dc-data-table .jupyter.icon {
+  position: static;
+  padding: 10px 7px 10px 8px; }
+  .dc-data-table .jupyter.icon div {
+    height: 16px;
+    /* jupyter.png, planet.png, notes.png */
+    background-image: url(/web/img/planet.png);
     background-size: 100% 100%; }
 
 .dc-data-table th {
