add launch days ago icon, similar to refresh
Former-commit-id: 4ef276b0e2dcd3e01812790402873200c67018db

--- a/style/dc.scss
+++ b/style/dc.scss
@@ -556,6 +556,18 @@ body .dc-chart g.row text {
 
 .container {
 
+    div.launch_button {
+        padding: 7px;
+        width: 20px;
+
+        div {
+            background-image: url(/web/img/refresh.png);
+            background-size: 100% 100%;
+            width: 17px;
+            height: 17px
+        }
+    }
+
     .contain_show_more {
 
         text-align: center;
