--- a/style/dc.css
+++ b/style/dc.css
@@ -393,6 +393,14 @@ body .dc-chart g.row text {
 .container {
   /* make room for rotated labels. */
   /* Need to be able to see long labels without them overlapping each other. */ }
+  .container div.launch_button {
+    padding: 7px;
+    width: 20px; }
+    .container div.launch_button div {
+      background-image: url(/web/img/refresh.png);
+      background-size: 100% 100%;
+      width: 17px;
+      height: 17px; }
   .container .contain_show_more {
     text-align: center;
     padding: 0 0 15px 0; }
